objects/AcctSeed__Billing_Format__c.object
<CustomObject>
    <description>Used to store configuration and default settings related to the pdf generation of a record.</description>
    <fields>
        <fullName>AcctSeed__Automated_Email_Delivery__c</fullName>
        <inlineHelpText>These values relate to the Automated Email Billing Job in Accounting Settings.</inlineHelpText>
        <label>Automated Email Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Zero Balance</fullName>
                </value>
                <value>
                    <fullName>No Delivery</fullName>
                    <default>true</default>
                    <label>No Delivery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Days_Offset__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Used to calculate due date. Billing date minus Billing days offset equals due date.</inlineHelpText>
        <label>zDep-Billing Days Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Logo__c</fullName>
        <inlineHelpText>URL to display your logo on the Billing. Upload your logo as an externally available image in documents. Right click on the image and copy URL of logo. Paste the URL in this field.</inlineHelpText>
        <label>zDep-Billing Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <defaultValue>&quot;Net 30&quot;</defaultValue>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>zDep-Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Type_Override__c</fullName>
        <inlineHelpText>Allows you to override the standard Invoice or Credit Memo type billing. Can be used for orders, packing slips, quotes. etc.</inlineHelpText>
        <label>zDep-Billing Type Override</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_City_State_Postal_Code__c</fullName>
        <label>zDep-Company City State Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_City__c</fullName>
        <defaultValue>$Organization.City</defaultValue>
        <label>Company City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Country__c</fullName>
        <defaultValue>$Organization.Country</defaultValue>
        <label>Company Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Fax__c</fullName>
        <label>zDep-Company Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Name__c</fullName>
        <defaultValue>$Organization.Name</defaultValue>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Phone__c</fullName>
        <label>zDep-Company Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_PostalCode__c</fullName>
        <defaultValue>$Organization.PostalCode</defaultValue>
        <label>Company PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_State__c</fullName>
        <defaultValue>$Organization.State</defaultValue>
        <label>Company State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Street2__c</fullName>
        <defaultValue>$Organization.Street</defaultValue>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Company_Street__c</fullName>
        <defaultValue>$Organization.Street</defaultValue>
        <label>zDep-Company Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Format__c</fullName>
        <inlineHelpText>Allows for overriding the default currency format provided in VF page.</inlineHelpText>
        <label>Currency Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Custom_Footer_Content__c</fullName>
        <inlineHelpText>Used to display custom footer content on the Billing PDF.</inlineHelpText>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Custom_Header_Content__c</fullName>
        <inlineHelpText>Used to display custom header content on the Billing PDF.</inlineHelpText>
        <label>zDep-Custom Header Content</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Email_Template__c</fullName>
        <inlineHelpText>This is the email template used when emailing Billing PDF Invoices. Use the Template Unique Name NOT the Template Name when populating this field.</inlineHelpText>
        <label>Default Email Template</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description_for_Ext_Total__c</fullName>
        <defaultValue>&quot;Ext Total&quot;</defaultValue>
        <label>zDep-Description for Ext Total</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description_for_Rate__c</fullName>
        <defaultValue>&quot;Rate&quot;</defaultValue>
        <label>zDep-Description for Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description_for_Units__c</fullName>
        <defaultValue>&quot;Units&quot;</defaultValue>
        <label>zDep-Description for Units</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Account_Shipping_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Account Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Billing_Cycle_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Billing Cycle Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Custom_Footer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Custom Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Custom_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Custom Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_GL_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display GL Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Invoice_Comment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Invoice Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_List_Price_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to display list prices and discounts in the invoice format.</inlineHelpText>
        <label>zDep-Display List Price &amp; Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_PO_Number__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display PO Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Product_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDep-Display Product Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDep-Display Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Project_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <label>zDep-Display Project Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays Project in the body of the billing.</inlineHelpText>
        <label>zDep-Display Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDep-Display Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Variable_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDep-Display Variable 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Display_Variable_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDep-Display Variable 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Group_by_Level_1__c</fullName>
        <inlineHelpText>Items in the body of the Invoice PDF will be sorted by this data element 1st.</inlineHelpText>
        <label>zDep-Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>GL Account</fullName>
                </value>
                <value>
                    <fullName>Project Task</fullName>
                </value>
                <value>
                    <fullName>Variable 1</fullName>
                </value>
                <value>
                    <fullName>Variable 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Group_by_Level_2__c</fullName>
        <description>Deprecated in Version 1.17</description>
        <inlineHelpText>Deprecated in Version 1.17</inlineHelpText>
        <label>zDep-Group by Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>GL Account</fullName>
                </value>
                <value>
                    <fullName>Project Task</fullName>
                </value>
                <value>
                    <fullName>Variable 1</fullName>
                </value>
                <value>
                    <fullName>Variable 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Image__c</fullName>
        <inlineHelpText>This is the image which will display in the right top corner of the PDF.</inlineHelpText>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Logo_Display__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If your logo URL was copied into the logo field properly, the image should display here.</inlineHelpText>
        <label>zDep-Logo Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Numeric_Format__c</fullName>
        <inlineHelpText>Overrides the default numeric format (6 decimal places) for the Quantity field on PDF formats. For instance, you would enter &apos;0.00&apos; to restrict this to 2 decimal places.</inlineHelpText>
        <label>Numeric Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Org_Wide_Email_Address__c</fullName>
        <label>Org-Wide Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Remittance_Email__c</fullName>
        <inlineHelpText>Email to display on billing format for customers to use when contacting your organization with questions on their bill.</inlineHelpText>
        <label>zDep-Remittance Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__ReplyTo_Email__c</fullName>
        <label>ReplyTo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sort_Field__c</fullName>
        <inlineHelpText>The API name of the field used to sort the billing lines.</inlineHelpText>
        <label>Sort Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Title_for_Comments__c</fullName>
        <defaultValue>&quot;Comments&quot;</defaultValue>
        <inlineHelpText>The text here will over write the Comments title in the Billing PDF. This is used to better describe your offering to your customer.</inlineHelpText>
        <label>zDep-Title for Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Title_for_Variable_1__c</fullName>
        <inlineHelpText>The text here will over write the Time Card Variable 1 title in the Billing PDF. This is used to better describe your offering to your customer.</inlineHelpText>
        <label>zDep-Title for Variable 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Title_for_Variable_2__c</fullName>
        <inlineHelpText>The text here will over write the Time Card Variable 2 title in the Billing PDF. This is used to better describe your offering to your customer.</inlineHelpText>
        <label>zDep-Title for Variable 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <inlineHelpText>The type of record this PDF Format is associated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Use_Proprietary_Billing_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the proprietary billing number will appear on the invoice PDF rather than the standard salesforce auto-number.</inlineHelpText>
        <label>zDep-Use Proprietary Billing Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Identification_Number__c</fullName>
        <inlineHelpText>A unique ID that HMRC provides to businesses when they register for VAT. In the UK, VAT numbers are nine digits long and always have the prefix &apos;GB&apos;.</inlineHelpText>
        <label>VAT Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Visualforce_PDF_Page__c</fullName>
        <inlineHelpText>The API name of the Visualforce page that is used to display the PDF rendition of the Billing.</inlineHelpText>
        <label>Visualforce PDF Page</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PDF Format</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Billing_Terms_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PDF Format Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>